--- a/test.html
+++ b/test.html
@@ -10,4 +10,12 @@
     <p>hahaha</p>
     <p>hello world!</p>
 </body>
+
+<body>
+
+<p>Use tp bald.</p>
+
+<p><b>This text is bold Now.</b></p>
+
+</body>
 </html>
